# ppi-jarvis-util

./: .coveragerc  .simplecov  None  README.md  meta.yaml  pr.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
ci/: install_deps.sh  install_jarvis.sh  lint.sh  run_tests.sh
example/: basic_argparse.py  boolean_spaghetti.py  choices.py  hostfile_test.py  hostfile_threads_test.py  menu_argparse.py  remainder.py  remainder_kv.py
jarvis_util/: __init__.py  jutil_manager.py
jarvis_util/introspect/: fi_info.py  monitor.py  system_info.py
jarvis_util/serialize/: ini_file.py  json_file.py  pickle.py  text_file.py  yaml_file.py
jarvis_util/shell/: compile.py  exec.py  exec_info.py  filesystem.py  kill.py  local_exec.py  mpi_exec.py  pbs_exec.py  process.py  pscp.py  pssh_exec.py  scp.py  slurm_exec.py  spark_exec.py  ssh_exec.py
jarvis_util/util/: argparse.py  expand_env.py  hostfile.py  import_all.py  import_mod.py  logging.py  size_conv.py  small_df.py
test/unit/: ares.yaml  test_argparse.py  test_hostfile.py  test_hostfile.txt  test_local_exec.py  test_monitor.py  test_mpi.py  test_small_df.py  test_system_info.py
